tests/ui/attributes/crate-type-empty.stderr
error: malformed `crate_type` attribute input
  --> $DIR/crate-type-empty.rs:2:1
   |
LL | #![crate_type]
   | ^^^^^^^^^^^^^^
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/linkage.html>

error: aborting due to 1 previous error

